[chore] 收藏区分业务类型
